syntax = "proto3";
import "types.proto";

package rpc;

message GetAccountRequest {
  bytes address = 1;
}

message GetAccountBalanceResponse {
  uint64 balance = 1;
}

message GetAccountNonceResponse {
  uint64 nonce = 1;
}

service AccountService {
  rpc GetBalance (GetAccountRequest) returns (GetAccountBalanceResponse);
  rpc GetNonce (GetAccountRequest) returns (GetAccountNonceResponse);
  rpc GetAccountState (GetAccountRequest) returns (uchain.types.AccountState);
}
