syntax = "proto3";
import "primitive_types.proto";

package rpc;

message Query {
  odana.primitive_types.Address app_id = 1;
  bytes query = 2;
}

message GetDescriptorRequest {
  odana.primitive_types.Address app_id = 1;
}

message GetDescriptorResponse {
  bytes descriptor = 1;
}

message QueryStorage {
  odana.primitive_types.Address app_id = 1;
  bytes storage_key = 2;
}
message QueryResponse {
  string typename = 1;
  bytes data = 2;
}

service RuntimeApiService {
  rpc QueryRuntime(Query) returns (QueryResponse);
  rpc QueryRuntimeStorage(QueryStorage) returns (QueryResponse);
  rpc GetDescriptor(GetDescriptorRequest) returns (GetDescriptorResponse);
}
