syntax = "proto3";
import "types.proto";

package rpc;

message UnsignedTransactionRequest {
  uchain.types.Transaction tx = 1;
  bytes secret_key = 2;
}

message SignedTransactionResponse {
  bytes hash = 1;
  uchain.types.SignedTransaction tx = 2;
}

message GetTransactionStatusResponse {
  repeated uchain.types.TransactionStatus status = 1;
}

message PendingTransactionsResponse {
  repeated AddressTransactionList pending = 1;
}

message AddressTransactionList {
  bytes address = 1;
  uchain.types.TransactionList txs = 2;
}

message TxpoolContentResponse {
  repeated AddressTransactionList pending = 1;
  repeated AddressTransactionList queued = 2;
}
message TransactionHash {
  bytes hash = 1;
}

message TransactionHashes {
  repeated bytes txs = 1;
}

service TransactionsService {
  rpc SignTransaction(UnsignedTransactionRequest) returns (SignedTransactionResponse);
  rpc SignSendTransaction(UnsignedTransactionRequest) returns (SignedTransactionResponse);
  rpc SendTransaction(uchain.types.SignedTransaction) returns (TransactionHash);
  rpc GetTransactionStatus(TransactionHashes) returns (GetTransactionStatusResponse);
  rpc GetPendingTransactions(uchain.types.Empty) returns (PendingTransactionsResponse);
  rpc GetTxpoolContent(uchain.types.Empty) returns (TxpoolContentResponse);
}
